Create a vjtag2gpio demo program for FPGA
- Create the RTL for the demo program
- Update the FPGA collateral
- Update the vjtag_host script

--- a/fpga/de2/Makefile
+++ b/fpga/de2/Makefile
@@ -11,8 +11,11 @@ PROJECT ?= vjtag_host
 # top level name
 TOP ?= top
 # verilog source files
-VERILOG += $(shell find $(GIT_ROOT)/rtl -name "*.sv")
-VERILOG += $(shell find $(GIT_ROOT)/rtl -name "*.v")
+VERILOG += $(GIT_ROOT)/rtl/vjtag/vjtag_ctrl.sv
+VERILOG += $(GIT_ROOT)/rtl/vjtag/vjtag_ip.v
+VERILOG += $(GIT_ROOT)/rtl/vjtag/vjtag2wb.sv
+VERILOG += $(GIT_ROOT)/rtl/fpga_examples/fpga_vjtag2gpio.sv
+VERILOG += $(GIT_ROOT)/rtl/fpga_examples/wbgpio.sv
 VERILOG += $(GIT_ROOT)/fpga/de2/top.sv
 # verilog include directory
 SEARCH ?=
